# Beeler-Reuter-finitewave-model

./: CITATION.cff  LICENSE  README.md  pyproject.toml
beeler_reuter/: ops.py
examples/: beeler_reuter_example.py
implementation/: beeler_reuter_0d.py
tests/: action_potential.csv  model_test.py
