[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
# Replace with the model's name and description.
name = "beeler-reuter-finitewave-model"
version = "0.1.0"
description = "Beeler-Reuter model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cardiac", "electrophysiology", "finitewave", "model"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pyqt6>=6.10.2",
]

# Important: entry point, which is used by Finitewave
# Replace "model_template" with the actual model's ID. 
[project.entry-points."finitewave.models"]
model_template = "beeler_reuter.ops"

[tool.hatch.build.targets.wheel]
packages = ["beeler_reuter"]

[tool.hatch.metadata]
allow-direct-references = true
